--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   drop_shadow_image: ^0.9.1
   smooth_page_indicator: ^1.0.0+2
   shared_preferences: ^2.0.17
+  url_launcher: ^6.1.9
+  flutter_web_browser: ^0.17.1
+  share_plus: ^6.3.0
 
 dev_dependencies:
   flutter_test:
