--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ dependencies:
   url_launcher: ^6.1.9
   flutter_web_browser: ^0.17.1
   share_plus: ^6.3.0
+  flutter_local_notifications: ^13.0.0
+  flutter_kurdish_localization: ^1.0.1
+  firebase_core: ^2.5.0
+  firebase_analytics: ^10.1.1
 
 dev_dependencies:
   flutter_test:
@@ -35,7 +39,7 @@ flutter:
 
   assets:
     - assets/images/
-    - assets/images/logos/
+    - assets/images/logo/
 
 
 
