--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_kurdish_localization: ^1.0.1
   firebase_core: ^2.5.0
   firebase_analytics: ^10.1.1
+  cloud_firestore: ^4.3.2
 
 dev_dependencies:
   flutter_test:
