--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_core: ^2.5.0
   firebase_analytics: ^10.1.1
   cloud_firestore: ^4.3.2
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
@@ -41,6 +42,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/logo/
+    - assets/json/
 
 
 
