--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   firebase_core: ^2.5.0
   firebase_analytics: ^10.1.1
   cloud_firestore: ^4.3.2
-  http: ^0.13.5
+  connectivity: ^3.0.6
+  flutter_offline: ^2.1.0
 
 dev_dependencies:
   flutter_test:
