--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   shared_preferences: ^2.0.17
   translator: ^0.1.7
   firebase_core: ^2.6.1
+  flutter_tts: ^3.6.3
 
 dev_dependencies:
   flutter_test:
