--- a/.github/workflows/v0.0.1.yml
+++ b/.github/workflows/v0.0.1.yml
@@ -26,11 +26,9 @@ jobs:
 
     - name: Build Web
       run: flutter build web --release
-
-    - name: Push Web to dev branch
-      uses: ad-m/github-push-action@master
-      with:
-        branch: dev
-        directory: build/web
-        github_token: ${{ secrets.actions.UPLOAD_WEB }}
         
+    - name: Deploy to Github Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.UPLOAD_WEB }}
+        publish_dir: build/web
